their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- SLD: Use style's width paramater when generating sld (#1192)

Version 5.2.0-beta2 (2008-06-18):
---------------------------------

- Fixed possible buffer overrun with Oracle Spatial driver (#2572)

- mapogcsos.c: support srsName in GetObservation (#2414)

- Filter Encoding: Modify DWithin definition (#2564)

- Added webObj legendformat and browseformat mapping in PHP MapScript (#2309)

- Removed static buffer size limit in msIO_*printf() functions (#2214)

- Fixed libiconv detection in configure for OSX 10.5 64 bit (#2396)

- mapstring.c: possible buffer overflow in msGetPath (#2649)

- maputil.c: Correct expression evaluation with text containing 
  apostrophes (#2641)

- mapwfs.c: Possibly generate an error message when applying filter 
  encoding (#2444)

- Added MS_LABEL_BINDING constants for SWIG MapScript (#2643)

- mapogcsos.c: fix POST support (#2379)

- maplibxml2.c: helper functions XML POST fix (#2379)

- mapwfs.c: fix segfault when srsName is not passed on BBOX Filter (#2644)

- mapwfs.c: do not return error for empty query results (#2444)

- Remove C++-style comments and most other warnings thrown by -pedantic (#2598)

- mapwfs.c/mapwfs11.c: set GML MIME type correctly

- mapogcsos.c: advertise supported SRS list via
  MAP.WEB.METADATA.sos_srs (#2414)

- mapwfs.c: set layer extent to map extent for default
  GetFeature requests with no spatial predicates (#1287)

Version 5.2.0-beta1 (2008-06-11):
---------------------------------

- WMS/WFS layers can now specify a proxy servert (#571)

- mapwmslayer.c: set QUERY_LAYERS correctly (#2001)

- mapwcs.c: handle PARAMETER values correctly (#2509)

- SOS: fix various memory leaks (#2412)

- mapwcs.c: advertise temporal support in GetCapabilities (#2487)
