@@ -17,6 +17,8 @@ Current Version (SVN trunk):
 Version 5.2.0-beta2 (2008-06-18):
 ---------------------------------
 
+- mapogcsos.c: support invalid procedure in GetObservation (#2561)
+
 - Fixed possible buffer overrun with Oracle Spatial driver (#2572)
 
 - mapogcsos.c: support srsName in GetObservation (#2414)
